debathena-kiosk (1.4.8) unstable; urgency=low

  * Build-dep on debathena-gdm

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 16 Aug 2012 15:25:47 -0400

debathena-kiosk (1.4.7) unstable; urgency=low

  * Put bugme in the bottom right of the screen (Trac: #1199)
  * Bump standards-version

 -- Jonathan Reed <jdreed@mit.edu>  Sat, 04 Aug 2012 11:47:25 -0400

debathena-kiosk (1.4.6) unstable; urgency=low

  * Make postinst idempotent (Trac: 770)

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 06 Jun 2012 16:50:22 -0400

debathena-kiosk (1.4.5) unstable; urgency=low

  * Terminate kiosk sessions after 15 minutes.  Patch from Luke Faraone
  * Support Firefox through November, at which point we should give up and
    switch to Chrome
  * Add a gconf-tree.xml to prevent [redacted] (Trac: 1130)
  * Tweak wording on home page.
  * Don't launch the kiosk mode if an update is in progress (Trac: #1006)
  * Support launching from lightdm

 -- Jonathan Reed <jdreed@mit.edu>  Sun, 03 Jun 2012 17:21:52 -0400

debathena-kiosk (1.4.4) unstable; urgency=low

  * Support FF 6

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 17 Aug 2011 12:33:10 -0400

debathena-kiosk (1.4.3) unstable; urgency=low

  * "Disable" printing and warn the user that they're doing it wrong
    (Trac: #1016)
  * Support FF 5.

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 11 Aug 2011 12:28:24 -0400

debathena-kiosk (1.4.2) unstable; urgency=low

  * Call .run() on the dialog so that people can press Esc (Trac: #1007)
  * Make the button window non-resizable because the resize anchor is
    giant and ugly these days

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 02 Aug 2011 18:20:51 -0400

debathena-kiosk (1.4.1) unstable; urgency=low

  * Offer the user a chance to run the standalone reg applet, 
    since IcedTea sucks (Trac: #675, #650)

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 23 Aug 2010 14:16:15 -0400

debathena-kiosk (1.4) unstable; urgency=low

  [ Evan Broder ]